# metar-app

./: .gitignore  Cargo.toml  README.md
src/: api_key.json  example1.json  main.rs
src/libs/: airport.rs  api_key.rs  metar.rs  mod.rs  station.rs
